# superior-agents

./: .env.example  .gitignore  Dockerfile  README.md  autotradex.py  pyproject.toml  railway.json  render.yaml  setup.py
AutoTradeX/: Procfile  README.md  (+7 more)
GigNova/: .env.example  .gitignore  MANUAL_DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  mcp_implementation_guide.md  pyproject.toml  render.yaml  setup.py  updated_PRD.md
GigNova/backend/: .dockerignore  .env.example  Dockerfile  INTEGRATION_GUIDE.md  Procfile  README.md  railway.json  requirements.txt  research.py  test_local_implementations.py  test_local_services.py
GigNova/backend/archive/: app.py  manager.py  vector_manager.py
GigNova/backend/docs/: beginner_guide.md  getting_started.md
GigNova/backend/examples/: basic_workflow.py  blockchain_tutorial.py  groq_example.py
GigNova/backend/gignova/: app_mcp.py  orchestrator.py  orchestrator_mcp.py
GigNova/backend/gignova/agents/: base.py  matching.py  negotiation.py  payment.py  qa.py
GigNova/backend/gignova/api/: routes.py  routes_mcp.py
GigNova/backend/gignova/archive/: app.py
GigNova/backend/gignova/blockchain/: local_manager.py  manager_mcp.py
GigNova/backend/gignova/config/: settings.py
GigNova/backend/gignova/database/: local_vector_manager.py  vector_manager_mcp.py
GigNova/backend/gignova/ipfs/: manager.py  manager_mcp.py
GigNova/backend/gignova/llm/: __init__.py  groq_adapter.py
GigNova/backend/gignova/mcp/: __init__.py  client.py
GigNova/backend/gignova/models/: base.py
GigNova/backend/gignova/utils/: helpers.py  service_factory.py
GigNova/backend/tests/: test_groq_adapter.py  test_mcp_integration.py
GigNova/contracts/: .env.example  README.md  api_examples.md  hardhat.config.js  integration_guide.md  package.json
GigNova/contracts/scripts/: deploy.js  deploy_gignova_contract.js  test_gignova_contract.js
GigNova/contracts/src/: GigNovaContract.sol
GigNova/contracts/tests/: GigNovaContract.test.js
GigNova/frontend/: .env.production  Dockerfile  README.md  netlify.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
GigNova/frontend/src/: App.css  App.tsx  react-app-env.d.ts
GigNova/frontend/src/components/common/: Footer.css  Footer.tsx  LandingPage.tsx
GigNova/frontend/src/components/jobs/: JobRecommendations.tsx
GigNova/frontend/src/components/messaging/: MessageCenter.css  MessageCenter.tsx
GigNova/frontend/src/components/notifications/: NotificationSystem.css  NotificationSystem.tsx
GigNova/frontend/src/components/payments/: PaymentMethods.css  PaymentMethods.tsx
GigNova/frontend/src/components/portfolio/: PortfolioShowcase.css  PortfolioShowcase.tsx
GigNova/frontend/src/components/qa/: QualityAssurance.css  QualityAssurance.tsx
GigNova/frontend/src/components/search/: AdvancedSearch.css  AdvancedSearch.tsx
GigNova/frontend/src/utils/: api.ts  apiConfig.ts
GigNova/tests/: conftest.py  test_agents.py  test_api.py  test_models.py  test_orchestrator.py
(+38 files in other folders)
